--- a/.gitignore
+++ b/.gitignore
@@ -383,6 +383,8 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
+.vscode
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -482,8 +484,6 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
-
-
 
 ###### Angular gitignore
 
