--- a/StillMeBackend/StillMeBackend.MessengerAPI/appsettings.json
+++ b/StillMeBackend/StillMeBackend.MessengerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "conn string"
   },
   "Logging": {
     "LogLevel": {
