ref: rename gateway project

--- a/StillMeBackend/StillMeBackend.Gateway/appsettings.json
+++ b/StillMeBackend/StillMeBackend.Gateway/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "conn string"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
